Unify stream catalog metadata and data-plane lifecycle (#6)